# swq_base

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: swq_high_num.h  swq_ini.h  swq_json.h  swq_string.h  swq_utils.h  swq_xml.h
script/: generation_ini.py  generation_json.py  generation_xml.py  json_generation.py  utils.py  xml_generation.py
src/: main.cpp  swq_high_num.cpp  swq_ini.cpp  swq_json.cpp  swq_string.cpp  swq_utils.cpp  swq_xml.cpp
test/: test_high_num.cpp  test_ini.cpp  test_json.cpp  test_string.cpp  test_xml.cpp
